Bug 369335 - Copy+Dragging a frame onto first frame results in crash
Summary: Copy+Dragging a frame onto first frame results in crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.0.2 Alpha
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-25 15:50 UTC by Bollebib
Modified: 2016-09-28 10:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2016-09-25 15:50:28 UTC
1) Make an animation layer
2)Draw 5 or so frames
3)CTRL+drag a frame to the 1st frame (timestamp 0) to attempt to copy-overwrite the first frame

Krita will crash every time

Windows 10

krita.exe caused an Access Violation at location 00000000089B09B0 in module libkritaimage.dll Reading from location 0000000000000010.

AddrPC           Params
00000000089B09B0 000000007F1A2DC0 000000007F1A2DB0 0000086F00000EFF  libkritaimage.dll!frameIdAt  [C:/dev/krita/libs/image/kis_raster_keyframe_channel.cpp @ 77]
0000000008B1B78B 0000000000000000 0000000000B38C60 000000004608C6C0  libkritaimage.dll! ??   [C:/dev/krita/libs/image/kis_paint_device_strategies.h @ 37]
0000000008936D3D 000000007F1A2DC0 0000000000B38B50 0000000000B38B50  libkritaimage.dll!compositionSourceColorSpace  [C:/dev/krita/libs/image/kis_paint_device.cc @ 114]
0000000008A97169 0000000000000005 000000004571D850 0000000000B38BC0  libkritaimage.dll!getDeviceLazy  [/dev/i/include/QtCore/qsharedpointer_impl.h @ 192]
00000000089033D0 000000004571C8B0 0000000100000005 0000000048204601  libkritaimage.dll!projection  [C:/dev/krita/libs/image/kis_layer.cc @ 735]
0000000008904C2E 0000000000180CC0 00007FFD0000004D 0000000000180150  libkritaimage.dll!changeRect  [C:/dev/krita/libs/image/kis_layer.cc @ 744]
000000000890B3A8 0000000000000000 0000000000000040 0000000000000000  libkritaimage.dll!changeRect  [C:/dev/krita/libs/image/kis_layer_projection_plane.cpp @ 111]
0000000008AA1C15 0000000055397C50 0000000000000001 0000000000B39180  libkritaimage.dll!collectRects  [C:/dev/krita/libs/image/kis_simple_update_queue.cpp @ 94]
00000000088D8F39 0000000000B38ED8 0000000000B38ED4 00000000394B86B8  libkritaimage.dll!addJob  [C:/dev/krita/libs/image/kis_simple_update_queue.cpp @ 191]
00000000088D92E1 0000000000000001 0000000054DA1480 000000003C0567C0  libkritaimage.dll!addUpdateJob  [C:/dev/krita/libs/image/kis_simple_update_queue.cpp @ 157]
00000000088DCE3D 0000000000001BA4 0000000000B38FE0 0000000000000006  libkritaimage.dll!updateProjection  [C:/dev/krita/libs/image/kis_update_scheduler.cpp @ 131]
00000000088F62DD 0000000054DA1480 0000000000000000 00000000460926E0  libkritaimage.dll!requestProjectionUpdateImpl  [C:/dev/krita/libs/image/kis_image.cc @ 1443]
00000000088F64C2 000003F600000201 000004B500000484 0000000000000002  libkritaimage.dll!requestProjectionUpdate  [C:/dev/krita/libs/image/kis_image.cc @ 1470]
00000000089A9A1C 0000000000B392C0 000000006441ED19 0000000000B391C0  libkritaimage.dll!requestUpdate  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 505]
00000000089AB870 0000000054EF6840 0000000064403AE4 00000000025C0000  libkritaimage.dll!removeKeyframeLogical  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 252]
00000000089AC7AC 000000004609E940 00000000089AD0BF 0000000000B392B0  libkritaimage.dll!replaceKeyframeAt  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 220]
00000000089AD3B5 0000000000000000 0000000000000008 0000000000000000  libkritaimage.dll!redo  [C:/dev/krita/libs/image/kis_keyframe_commands.cpp @ 14]
00000000089AA395 0000000000B394A0 0000000068B574A0 0000000000000000  libkritaimage.dll!deleteKeyframeImpl  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 180]
00000000089AA57B 0000000000000000 000000004609E940 0000000000B395A0  libkritaimage.dll!insertKeyframe  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 133]
00000000089AB5D5 0000000000000000 00000000089A8F50 00000000454780B0  libkritaimage.dll!copyKeyframe  [C:/dev/krita/libs/image/kis_keyframe_channel.cpp @ 126]
0000000042D64731 0000000000B39670 0000000000000004 0000000000000020  kritaanimationdocker.dll!KisAnimationUtils::moveKeyframes
0000000042D553A3 000000004571C8B0 000000003BFD8E00 0000000000B39770  kritaanimationdocker.dll!KisTimeBasedItemModel::offsetFrames
0000000042D5AE73 00000000458838B0 0000000000B39F80 0000000000000001  kritaanimationdocker.dll!TimelineFramesModel::dropMimeData
0000000002D88132 000000110000001C 0000000D0000000D 000000004510193B  Qt5Widgets.dll!QAbstractItemView::dropEvent
0000000042D5EE4E 0000000000000000 0000000000000000 0000000000000001  kritaanimationdocker.dll!TimelineFramesView::dropEvent
0000000002B9D828 000000003B9D95E0 0000000000000010 0000000055321310  Qt5Widgets.dll!QWidget::event
0000000002C8664E 0000000061001170 0000000055321310 0000000061001170  Qt5Widgets.dll!QFrame::event
0000000002D936F1 0000000000000400 0000000000000000 0000000000000001  Qt5Widgets.dll!QAbstractItemView::viewportEvent
0000000068A0E7BD 0000000068B59200 0000000000000000 000000000000000A  Qt5Core.dll!QCoreApplicationPrivate::sendThroughObjectEventFilters
0000000002B5A315 0000000000000400 000000000000000A 4068700000000011  Qt5Widgets.dll!QApplicationPrivate::notify_helper
0000000002B5FC2E 0000001700000780 00000000456CE270 0000000000000000  Qt5Widgets.dll!QApplication::notify
0000000069C53C86 0000000000000000 0000000000000000 0000000000000000  libkritaui.dll!notify  [C:/dev/krita/libs/ui/KisApplication.cpp @ 511]
0000000068A0E9F2 0000000000000000 00007FFDF6B6F41E 0000000000000000  Qt5Core.dll!QCoreApplication::notifyInternal2
0000000002BB5354 0000000022B73800 0000000000B3A510 000000004580F670  Qt5Widgets.dll!QDesktopWidget::qt_metacall
0000000002BB5E60 0000000000000000 00007FFDF360CA46 00000000C0000008  Qt5Widgets.dll!QDesktopWidget::qt_metacall
0000000002B5A33C 0000000000000000 0000000000000009 0000000000AB0500  Qt5Widgets.dll!QApplicationPrivate::notify_helper
0000000002B5F6A0 8000000000000000 000000004580F670 0000000000000000  Qt5Widgets.dll!QApplication::notify
0000000069C53C86 000000000000C2A2 0000000000C00000 0000000000000000  libkritaui.dll!notify  [C:/dev/krita/libs/ui/KisApplication.cpp @ 511]
0000000068A0E9F2 0000000000B3A580 00007FFDF36622FE 0000000029629140  Qt5Core.dll!QCoreApplication::notifyInternal2
0000000061966FB5 000000009E230490 00000000010C8190 0000000000000000  Qt5Gui.dll!QGuiApplicationPrivate::processDrop
000000006194B25C 0000039D000000C3 00000000000003B4 0000000000000843  Qt5Gui.dll!QWindowSystemInterface::handleDrop
00000000234E8BCE 0000000000B3A720 0000000080004005 0000000000000009  qwindows.dll!0x58bce
00007FFDF64159B9 0000000000AB05A0 00007FFDF647BD98 0000000000000000  ole32.dll!CPrivDragDrop::PrivDragDrop  [d:\th\com\ole32\com\rot\getif.cxx @ 790]
00007FFDF6415840 00000000295EC170 0000000000000000 00000000295EEFC0  ole32.dll!PrivDragDrop  [d:\th\com\ole32\com\rot\getif.cxx @ 979]
00007FFDF644119C 000033CD24E4B4BD 0000000000000000 0000000000000008  ole32.dll!CDropTargetAdapter::Drop  [d:\th\com\ole32\ole232\drag\drag.cpp @ 3338]
00007FFDF6440B40 000003B400000843 0000000000000000 000000007EFE3860  ole32.dll!CDragOperation::CompleteDrop  [d:\th\com\ole32\ole232\drag\drag.cpp @ 2575]
00007FFDF64445A7 0000000000B3ABCF 0000000068B20928 0000000000000000  ole32.dll!DoDragDrop  [d:\th\com\ole32\ole232\drag\drag.cpp @ 3034]
00000000234EA1EF 0000000000B3ADC0 0000000061973520 0000000000000030  qwindows.dll!0x5a1ef
0000000061973714 0000000054DAC2C0 0000000054F0F370 00000000456CEFF0  Qt5Gui.dll!QDragManager::drag
000000006197301D 0000000000B3ADF0 00000000456DF070 0000000022B73800  Qt5Gui.dll!QDrag::exec
0000000002D94104 0000000000000000 0000000000000001 0000000000000000  Qt5Widgets.dll!QAbstractItemView::startDrag
0000000042D5E238 0000000000000009 0000000000C2FE80 0000000000000008  kritaanimationdocker.dll!TimelineFramesView::startDrag
0000000002D92CEE 00000000456CE270 000000003B9D95E0 000000003C0562D0  Qt5Widgets.dll!QAbstractItemView::mouseMoveEvent
0000000042D601D4 0000000037FD76E8 000000003BC339E0 000000003BC339E0  kritaanimationdocker.dll!TimelineFramesView::mouseMoveEvent
0000000002B9D828 00000000391B4760 0000000002B9DA2C 0000000068B592E0  Qt5Widgets.dll!QWidget::event
0000000002C8664E 0000000000180DE0 0000000000000030 0000000000180DE0  Qt5Widgets.dll!QFrame::event
0000000002D936F1 000000003B9DB8E0 000000006889DEAB 0000000045917370  Qt5Widgets.dll!QAbstractItemView::viewportEvent
0000000068A0E7BD 0000000000B3FDA0 0000000000B3B5F0 0000000000B3B5F0  Qt5Core.dll!QCoreApplicationPrivate::sendThroughObjectEventFilters
0000000002B5A315 000000003B9DB8E0 0000000000000000 0000000000B3B990  Qt5Widgets.dll!QApplicationPrivate::notify_helper
0000000002B6043D 0000000000B3B7F0 00000000456CE270 0000000000000000  Qt5Widgets.dll!QApplication::notify
0000000069C53C86 0000000061968020 0000000002B8C876 0000000061968020  libkritaui.dll!notify  [C:/dev/krita/libs/ui/KisApplication.cpp @ 511]
0000000068A0E9F2 00000000456CE270 00000000456CE270 00000000456CE270  Qt5Core.dll!QCoreApplication::notifyInternal2
0000000002B5EB90 0000000000000200 0000000000000009 0000000000000007  Qt5Widgets.dll!QApplicationPrivate::sendMouseEvent
0000000002BB35E7 0000000022B73800 0000000000B3BFB0 000000004580F670  Qt5Widgets.dll!QDesktopWidget::qt_metacall
0000000002BB5EAB 0000000000B3FDA0 00000000229C2710 0000000000000001  Qt5Widgets.dll!QDesktopWidget::qt_metacall
0000000002B5A33C 00000000000C0A5A 0000000000000401 0000000000000000  Qt5Widgets.dll!QApplicationPrivate::notify_helper
0000000002B5F6A0 0000000000000000 000000004580F670 0000000000000000  Qt5Widgets.dll!QApplication::notify
0000000069C53C86 408BF80000000000 00000000619764F4 0000000000B3BE0F  libkritaui.dll!notify  [C:/dev/krita/libs/ui/KisApplication.cpp @ 511]
0000000068A0E9F2 00000000001D076A 0000000000B3C0D8 0000000022B2B208  Qt5Core.dll!QCoreApplication::notifyInternal2
0000000061965C07 0000000000000401 0000000000B3C1E8 0000000000B3C218  Qt5Gui.dll!QGuiApplicationPrivate::processMouseEvent
0000000061967635 0000000000000000 00000000000C0A5A 0000000000000000  Qt5Gui.dll!QGuiApplicationPrivate::processWindowSystemEvent
000000006194CD4C 0000000000000401 0000000000000000 00000000000C0A5A  Qt5Gui.dll!QWindowSystemInterface::sendWindowSystemEvents
0000000068A5577A 0000000000000000 0000000000000000 0000000000B3C3D8  Qt5Core.dll!QEventDispatcherWin32Private::sendTimerEvent
00007FFDF6201169 00000000010A6290 0000000068A55450 00000000000C0A5A  USER32.dll!UserCallWinProcCheckWow
00007FFDF6200C97 0000000022B9E840 0000000022B9E840 0000000000000001  USER32.dll!DispatchMessageWorker
0000000068A54EB3 0000000022B9E180 0000000000000024 0000000000B3FDA0  Qt5Core.dll!QEventDispatcherWin32::processEvents
00000000234FAB05 0000000000000080 0000000000000014 0000000045BA3B90  qwindows.dll!qt_plugin_instance
0000000068A0DCCA 0000000068A34830 0000000000B3FCB0 0000000068A2E670  Qt5Core.dll!QEventLoop::exec
0000000068A14927 0000000000B3FAB0 0000000000B3FCB0 0000000022B17F30  Qt5Core.dll!QCoreApplication::exec
000000000041B185 0000000000000001 0000000000000050 0000000000847B30  krita.exe!main  [C:/dev/krita/krita/main.cc @ 234]
00000000004013E8 0000000000000000 0000000000000000 0000000000000000  krita.exe!__tmainCRTStartup  [C:/crossdev/src/mingw-w64-v4-git/mingw-w64-crt/crt/crtexe.c @ 332]
00000000004014EB 0000000000000000 0000000000000000 0000000000000000  krita.exe!WinMainCRTStartup  [C:/crossdev/src/mingw-w64-v4-git/mingw-w64-crt/crt/crtexe.c @ 184]
00007FFDF4088102 00007FFDF40880E0 0000000000000000 0000000000000000  KERNEL32.DLL!BaseThreadInitThunk
00007FFDF6BBC5B4 0000000000000000 0000000000000000 0000000000000000  ntdll.dll!RtlUserThreadStart
Comment 1 Halla Rempt 2016-09-26 11:46:47 UTC
That's this code: 

int KisRasterKeyframeChannel::frameId(KisKeyframeSP keyframe) const
{
    KisRasterKeyframe *key = dynamic_cast<KisRasterKeyframe*>(keyframe.data());
    Q_ASSERT(key != 0);
    return key->frameId;
}
So I suspect that they key is indeed 0....
Comment 2 Scott Petrovic 2016-09-28 02:15:43 UTC
Crashing for me too on the latest windows build 3.0.1.90. Just confirming this bug.
Comment 3 joupent 2016-09-28 10:49:13 UTC
Git commit a4ea3c9dcedf0b71092a5f9dec5045ec1adcc804 by Jouni Pentikäinen.
Committed on 28/09/2016 at 10:40.
Pushed by jounip into branch 'master'.

Fix crash when copying a frame to time 0

M  +8    -3    libs/image/kis_paint_device.cc
M  +3    -1    libs/image/kis_raster_keyframe_channel.cpp

http://commits.kde.org/krita/a4ea3c9dcedf0b71092a5f9dec5045ec1adcc804