Fix crash when copying a frame to time 0

BUG: 369335